    - to reproduce the legacy `center` element, we added `display: flex` and `justify-content: center`.
    - `speak` and `speak-as` css properties have been updated.

- for HTML5, move col@valign to css
- for HTML5, change 3 letter language codes to 2 letter codes where available
- for HTML5, fill empty title elements
- for HTML5, improve handling of HTML4 table@frame and table@rules
- fixed crash in text file analysis when number of lines in paragraph exceeds log(max float). 700-ish
- include opentype fonts in EPUB file (.ttf. .otf, .woff), requires libgutenberg >= 0.8.14. fixes #106
- added an EPUB3 writer. In addition to producing valid EPUB3 files, some changes have been made to the produced EPUB.
    - There in only an "-images" flavor. We continue to produce EPUB2 in images and no-images flavors
    - Many changes in the HTML and CSS that were done for compatibility with e-readers are no longer done. They remain in place for EPUB2. For example: 
        - Floats are not removed.
        - CSS absolute units are not changed.
        - Uncommon characters and ligatures are not simplified.
        - <q> elements are not rewritten.
        - Preformatted sections are not reflowed.
        - data elements are not stripped
        - img class="dropcap" are not changed to spans
        - any of the above that prove to be needed can be added back as needed
        - all html4 -> html5 changes are made, no matter the source.
- Ebookmaker breaks HTML source into chunks to improve performance on EPUB readers. For EPUB3 files, the chunker treats `section` elements the same way it treated `div.section` elements for EPUB2. Similarly section elements in HTML5 source are converted to div.section elements for EPUB2. In addition, the maximum chunk size for EPUB3 is 300KB compared to 100KB for EPUB2.
- Ebookmaker now supports attribute in the epub namespace {http://www.idpf.org/2007/ops} These can be entered in source file in two ways: