@@ -25,6 +25,8 @@
 # packager: None ['ww', 'gzip']
 # cover: None [path]
 # generate_cover: False
+# epub_validator: java -jar epubcheck-4.2.6/epubcheck.jar
+# html_validator: vnu-runtime-image/bin/vnu
 
 [PATHS]
 # proxies: None
