@@ -19,7 +19,7 @@ import zipfile
 import time
 import os
 import copy
-import subprocess
+
 from xml.sax.saxutils import quoteattr
 
 from six.moves import urllib
@@ -736,6 +736,7 @@ class ContentOPF(object):
 class Writer(writers.HTMLishWriter):
     """ Class that writes epub files. """
 
+    VALIDATOR = 'EPUB_VALIDATOR'
 
     @staticmethod
     def strip_pagenumbers(xhtml, strip_classes):
@@ -1234,31 +1235,6 @@ class Writer(writers.HTMLishWriter):
             exception("Error building Epub: %s" % what)
             ocf.rollback()
             raise
-
-
-    def validate(self, job):
-        """ Validate generated epub using external tools. """
-
-        debug("Validating %s ..." % job.outputfile)
-
-        filename = os.path.join(os.path.abspath(job.outputdir), job.outputfile)
-
-        if hasattr(options.config, 'EPUB_VALIDATOR'):
-            validator = options.config.EPUB_VALIDATOR
-            info('validating...')
-            params = validator.split() + [filename]
-            checker = subprocess.Popen(params,
-                                       stdin=subprocess.PIPE,
-                                       stdout=subprocess.PIPE,
-                                       stderr=subprocess.PIPE)
-
-            (dummy_stdout, stderr) = checker.communicate()
-            if stderr:
-                error(stderr)
-                return 1
-
-        info("%s validates ok." % job.outputfile)
-        return 0
 
 
     def build(self, job):
